# socute

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: emitter.rs  grammar.pest  main.rs  parser.rs  tokeniser.rs
tools/: gen.py
