[package]
name = "socute"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = { version = "0.12.1", features = ["serde"] }
bit_ops = "0.1.16"
chumsky = "0.10.1"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
eyre = "0.6.12"
lazy_static = "1.5.0"
log = "0.4.27"
logos = "0.15.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
