[package]
name = "socute"
description = "Sega Saturn SCU DSP assembler"
version = "0.1.0"
edition = "2024"
author = "Matt Young"
homepage = "https://github.com/mattyoung101/socute"
repository = "https://github.com/mattyoung101/socute"
license = "MPL-2.0"

[dependencies]
bit_ops = "0.1.16"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
eyre = "0.6.12"
lazy_static = "1.5.0"
log = "0.4.27"
logos = "0.15.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
